1.0.1
Now saves size, position, floating and viibility of Terminal Plug.
Added save current state to terminal plug settings.
Fixed annoying qtermwidget5 changing menu text.
If qtermwidget5 not available will not try to build TerminalPlugin.
Creating file 'pass' in the root folder of a plugin will skip building/installing that plugin.
Added terminal plugin ( needs qtermwidget5 ).
Fixed hiding tab whilst mouse hidden.
Hide mouse pointer while typing.
Changed min required Qt5WebEngineWidgets version to 5.15.0.

1.0.0
Removed some debug messages.
Fixed minor gui glitch with overwrite msg.
Fixed some filetypes.
Added set maximimum nuber of recent files/folders.
Check and create necessary folders.
Added recent files.
Added recent folders.
Added remove fav button to side list to remove currently selected favourite.
Added favorites ( dAndd a folder from file list to sidelist ).
Added filter drop down.
Added filetypes filter.
Fixed non-existant last folder.
Added check for file exists warning.
Improved sorting in file dialog.
Added 'Refresh' to file dialog.
Fixed file type sorting.
Fixed showing broken links.
Fixed filetypes on remote share.
Fixed canceling in file chooser.
Fixed open as hexdump with spaces in filepath.
File chooser now remembers last load/save folder.
Fixes for file chooser.
Added custom file chooser.
Improved opening c,c++ etc style include files from nav menu.
Fixed double click select on large wrapped line.
Updated installaled root .desktop file.
Updated default "Run As Root" pref.
Fixed opening root editor from menu.
Raise find/replace dialog when dialog is already open.
Improved Double click on hyphenated word to include "_"
Double click on hyphenated word ( aaa-bbb-ccc ) or on version string ( 1.2.3 ) now selects correctly.
Tweaked shlang plugin.
Tweaked single instance.
Fixed badly exported DISPLAY variable.
Changed KKEDIT_FILE_LIST passed to tools to newline seperated list.
Fixes for getting glib/gio etc defs in 'Search in GTK Docs'.